Architecture Backend Avancée avec Fonctionnalités Créatives

--- a/package.json
+++ b/package.json
@@ -1,18 +1,347 @@
 {
-  "name": "vite-react-typescript-starter",
+  "name": "athena-ai-advanced",
   "private": true,
-  "version": "0.0.0",
+  "version": "2.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "server": "node server/index.js",
+    "db:migrate": "node server/database/migrate.js",
+    "db:seed": "node server/database/seed.js"
   },
   "dependencies": {
     "lucide-react": "^0.344.0",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "framer-motion": "^10.16.16",
+    "react-router-dom": "^6.20.1",
+    "zustand": "^4.4.7",
+    "react-query": "^3.39.3",
+    "socket.io-client": "^4.7.4",
+    "three": "^0.158.0",
+    "@react-three/fiber": "^8.15.11",
+    "@react-three/drei": "^9.88.13",
+    "react-spring": "^9.7.3",
+    "react-use-gesture": "^9.1.3",
+    "react-markdown": "^9.0.1",
+    "react-syntax-highlighter": "^15.5.0",
+    "react-hotkeys-hook": "^4.4.1",
+    "react-beautiful-dnd": "^13.1.1",
+    "react-virtualized": "^9.22.5",
+    "react-window": "^1.8.8",
+    "react-intersection-observer": "^9.5.3",
+    "react-speech-recognition": "^3.10.0",
+    "speech-synthesis-react": "^1.0.0",
+    "react-webcam": "^7.1.1",
+    "react-dropzone": "^14.2.3",
+    "react-pdf": "^7.5.1",
+    "mammoth": "^1.6.0",
+    "xlsx": "^0.18.5",
+    "jspdf": "^2.5.1",
+    "html2canvas": "^1.4.1",
+    "fabric": "^5.3.0",
+    "konva": "^9.2.0",
+    "react-konva": "^18.2.10",
+    "chart.js": "^4.4.0",
+    "react-chartjs-2": "^5.2.0",
+    "d3": "^7.8.5",
+    "react-d3-graph": "^2.6.0",
+    "cytoscape": "^3.26.0",
+    "cytoscape-react": "^2.0.2",
+    "monaco-editor": "^0.44.0",
+    "@monaco-editor/react": "^4.6.0",
+    "codemirror": "^6.0.1",
+    "@codemirror/lang-javascript": "^6.2.1",
+    "@codemirror/lang-python": "^6.1.3",
+    "@codemirror/theme-one-dark": "^6.1.2",
+    "prismjs": "^1.29.0",
+    "highlight.js": "^11.9.0",
+    "mermaid": "^10.6.1",
+    "react-flow-renderer": "^10.3.17",
+    "reactflow": "^11.10.1",
+    "react-grid-layout": "^1.4.4",
+    "react-resizable": "^3.0.5",
+    "react-draggable": "^4.4.6",
+    "react-split-pane": "^0.1.92",
+    "react-tabs": "^6.0.2",
+    "react-modal": "^3.16.1",
+    "react-tooltip": "^5.25.0",
+    "react-toastify": "^9.1.3",
+    "react-loading-skeleton": "^3.3.1",
+    "react-spinners": "^0.13.8",
+    "lottie-react": "^2.4.0",
+    "react-confetti": "^6.1.0",
+    "react-particles": "^2.12.2",
+    "tsparticles": "^2.12.0",
+    "react-typed": "^1.2.0",
+    "typewriter-effect": "^2.21.0",
+    "react-text-transition": "^3.1.0",
+    "react-countup": "^6.5.0",
+    "react-number-format": "^5.3.1",
+    "date-fns": "^2.30.0",
+    "moment": "^2.29.4",
+    "dayjs": "^1.11.10",
+    "react-datepicker": "^4.25.0",
+    "react-calendar": "^4.6.0",
+    "react-big-calendar": "^1.8.5",
+    "fullcalendar": "^6.1.10",
+    "react-color": "^2.19.3",
+    "react-colorful": "^5.6.1",
+    "react-image-crop": "^10.1.8",
+    "react-image-gallery": "^1.3.0",
+    "react-photo-view": "^1.2.4",
+    "react-zoom-pan-pinch": "^3.3.0",
+    "react-player": "^2.13.0",
+    "react-audio-player": "^0.17.0",
+    "wavesurfer.js": "^7.6.0",
+    "react-wavesurfer": "^0.8.6",
+    "tone": "^14.7.77",
+    "web-audio-api": "^0.2.2",
+    "ml5": "^0.12.2",
+    "tensorflow": "^4.15.0",
+    "@tensorflow/tfjs": "^4.15.0",
+    "@tensorflow/tfjs-react-native": "^0.8.0",
+    "brain.js": "^2.0.0-beta.23",
+    "synaptic": "^1.1.4",
+    "natural": "^6.8.0",
+    "compromise": "^14.10.0",
+    "sentiment": "^5.0.2",
+    "franc": "^6.1.0",
+    "langdetect": "^2.0.0",
+    "translate": "^2.0.2",
+    "google-translate-api": "^2.3.0",
+    "openai": "^4.20.1",
+    "anthropic": "^0.9.1",
+    "cohere-ai": "^7.7.5",
+    "replicate": "^0.25.2",
+    "huggingface": "^1.5.0",
+    "@google/generative-ai": "^0.2.1",
+    "axios": "^1.6.2",
+    "fetch": "^1.1.0",
+    "node-fetch": "^3.3.2",
+    "ws": "^8.14.2",
+    "socket.io": "^4.7.4",
+    "express": "^4.18.2",
+    "cors": "^2.8.5",
+    "helmet": "^7.1.0",
+    "compression": "^1.7.4",
+    "morgan": "^1.10.0",
+    "dotenv": "^16.3.1",
+    "bcryptjs": "^2.4.3",
+    "jsonwebtoken": "^9.0.2",
+    "passport": "^0.7.0",
+    "passport-jwt": "^4.0.1",
+    "passport-google-oauth20": "^2.0.0",
+    "passport-github2": "^0.1.12",
+    "multer": "^1.4.5-lts.1",
+    "sharp": "^0.33.1",
+    "jimp": "^0.22.10",
+    "canvas": "^2.11.2",
+    "pdf-parse": "^1.1.1",
+    "docx": "^8.5.0",
+    "csv-parser": "^3.0.0",
+    "xml2js": "^0.6.2",
+    "cheerio": "^1.0.0-rc.12",
+    "puppeteer": "^21.6.1",
+    "playwright": "^1.40.1",
+    "selenium-webdriver": "^4.16.0",
+    "nodemailer": "^6.9.7",
+    "twilio": "^4.19.3",
+    "stripe": "^14.9.0",
+    "paypal-rest-sdk": "^1.8.1",
+    "redis": "^4.6.11",
+    "ioredis": "^5.3.2",
+    "mongodb": "^6.3.0",
+    "mongoose": "^8.0.3",
+    "prisma": "^5.7.1",
+    "@prisma/client": "^5.7.1",
+    "sqlite3": "^5.1.6",
+    "better-sqlite3": "^9.2.2",
+    "mysql2": "^3.6.5",
+    "pg": "^8.11.3",
+    "sequelize": "^6.35.2",
+    "typeorm": "^0.3.17",
+    "knex": "^3.1.0",
+    "objection": "^3.1.3",
+    "lodash": "^4.17.21",
+    "ramda": "^0.29.1",
+    "immutable": "^4.3.4",
+    "uuid": "^9.0.1",
+    "nanoid": "^5.0.4",
+    "crypto-js": "^4.2.0",
+    "bcrypt": "^5.1.1",
+    "argon2": "^0.31.2",
+    "joi": "^17.11.0",
+    "yup": "^1.4.0",
+    "zod": "^3.22.4",
+    "ajv": "^8.12.0",
+    "validator": "^13.11.0",
+    "sanitize-html": "^2.11.0",
+    "dompurify": "^3.0.7",
+    "xss": "^1.0.14",
+    "rate-limiter-flexible": "^4.0.1",
+    "express-rate-limit": "^7.1.5",
+    "express-slow-down": "^2.0.1",
+    "winston": "^3.11.0",
+    "pino": "^8.17.2",
+    "bunyan": "^1.8.15",
+    "debug": "^4.3.4",
+    "chalk": "^5.3.0",
+    "ora": "^7.0.1",
+    "inquirer": "^9.2.12",
+    "commander": "^11.1.0",
+    "yargs": "^17.7.2",
+    "node-cron": "^3.0.3",
+    "agenda": "^5.0.0",
+    "bull": "^4.12.2",
+    "kue": "^0.11.6",
+    "amqplib": "^0.10.3",
+    "kafka-node": "^5.0.0",
+    "elasticsearch": "^16.7.3",
+    "@elastic/elasticsearch": "^8.11.0",
+    "algolia": "^4.22.0",
+    "fuse.js": "^7.0.0",
+    "lunr": "^2.3.9",
+    "flexsearch": "^0.7.43",
+    "minisearch": "^6.3.0",
+    "aws-sdk": "^2.1509.0",
+    "@aws-sdk/client-s3": "^3.462.0",
+    "@google-cloud/storage": "^7.7.0",
+    "cloudinary": "^1.41.0",
+    "firebase": "^10.7.1",
+    "firebase-admin": "^11.11.1",
+    "supabase": "^1.142.2",
+    "@supabase/supabase-js": "^2.38.5",
+    "appwrite": "^13.0.1",
+    "pocketbase": "^0.19.0",
+    "graphql": "^16.8.1",
+    "apollo-server-express": "^3.12.1",
+    "@apollo/client": "^3.8.8",
+    "relay-runtime": "^16.1.0",
+    "urql": "^4.0.6",
+    "hasura": "^2.36.1",
+    "strapi": "^4.15.5",
+    "directus": "^10.8.3",
+    "sanity": "^3.20.1",
+    "contentful": "^10.6.21",
+    "ghost": "^5.74.5",
+    "keystone": "^6.1.0",
+    "payload": "^2.0.0",
+    "forestadmin": "^9.3.1",
+    "retool": "^2.112.0",
+    "n8n": "^1.19.4",
+    "zapier": "^15.12.0",
+    "ifttt": "^1.1.0",
+    "microsoft-graph": "^3.0.7",
+    "google-apis": "^1.0.0",
+    "slack-sdk": "^6.10.0",
+    "discord.js": "^14.14.1",
+    "telegram": "^2.19.8",
+    "whatsapp-web.js": "^1.23.0",
+    "facebook-nodejs-business-sdk": "^18.0.3",
+    "twitter-api-v2": "^1.15.2",
+    "instagram-basic-display": "^1.0.0",
+    "linkedin-api": "^2.0.0",
+    "youtube-api": "^3.0.0",
+    "spotify-web-api-node": "^5.0.2",
+    "soundcloud": "^3.3.4",
+    "github": "^14.0.0",
+    "gitlab": "^14.2.2",
+    "bitbucket": "^2.8.1",
+    "jira": "^1.0.0",
+    "confluence": "^1.7.0",
+    "notion": "^2.2.3",
+    "airtable": "^0.12.2",
+    "trello": "^0.10.0",
+    "asana": "^3.0.4",
+    "monday": "^1.0.0",
+    "clickup": "^1.0.0",
+    "basecamp": "^1.0.0",
+    "todoist": "^1.0.0",
+    "evernote": "^2.0.5",
+    "onenote": "^1.0.0",
+    "dropbox": "^10.34.0",
+    "google-drive": "^3.0.0",
+    "onedrive": "^2.0.0",
+    "box": "^1.0.0",
+    "mega": "^1.0.0",
+    "pcloud": "^1.0.0",
+    "nextcloud": "^1.0.0",
+    "owncloud": "^1.0.0",
+    "seafile": "^1.0.0",
+    "syncthing": "^1.0.0",
+    "resilio": "^1.0.0",
+    "bittorrent": "^1.0.0",
+    "webtorrent": "^2.1.28",
+    "ipfs": "^0.66.0",
+    "libp2p": "^0.46.21",
+    "orbit-db": "^0.29.0",
+    "gun": "^0.2020.1240",
+    "yjs": "^13.6.10",
+    "automerge": "^2.1.10",
+    "sharedb": "^4.1.1",
+    "operational-transform": "^0.6.3",
+    "diff-match-patch": "^1.0.5",
+    "fast-diff": "^1.3.0",
+    "deep-diff": "^1.0.2",
+    "immer": "^10.0.3",
+    "mobx": "^6.12.0",
+    "redux": "^5.0.0",
+    "@reduxjs/toolkit": "^2.0.1",
+    "recoil": "^0.7.7",
+    "jotai": "^2.6.0",
+    "valtio": "^1.12.1",
+    "xstate": "^5.5.0",
+    "robot3": "^0.2.20",
+    "finite": "^1.4.1",
+    "machina": "^4.0.2",
+    "stately": "^1.0.0",
+    "rxjs": "^7.8.1",
+    "most": "^1.8.0",
+    "xstream": "^11.14.0",
+    "highland": "^2.13.5",
+    "bacon": "^0.7.10",
+    "kefir": "^3.8.8",
+    "flyd": "^0.2.8",
+    "callbag": "^1.4.0",
+    "wonka": "^6.3.4",
+    "zen-observable": "^0.10.0",
+    "observable": "^2.1.4",
+    "event-stream": "^4.0.1",
+    "through2": "^4.0.2",
+    "split2": "^4.2.0",
+    "pump": "^3.0.0",
+    "pipeline": "^1.0.0",
+    "stream-transform": "^3.2.6",
+    "csv-stringify": "^6.4.4",
+    "csv-generate": "^4.2.6",
+    "json-stream-stringify": "^3.1.4",
+    "ndjson": "^2.0.0",
+    "jsonlines": "^0.1.1",
+    "oboe": "^2.1.5",
+    "clarinet": "^0.12.4",
+    "sax": "^1.3.0",
+    "xml-stream": "^0.4.5",
+    "htmlparser2": "^9.0.0",
+    "parse5": "^7.1.2",
+    "jsdom": "^23.0.1",
+    "happy-dom": "^12.10.3",
+    "linkedom": "^0.16.8",
+    "playwright-core": "^1.40.1",
+    "chrome-launcher": "^1.1.0",
+    "lighthouse": "^11.4.0",
+    "web-vitals": "^3.5.0",
+    "perfume.js": "^8.4.0",
+    "tti-polyfill": "^0.2.2",
+    "first-input-delay": "^0.1.4",
+    "cls-polyfill": "^0.1.1",
+    "lcp-polyfill": "^0.1.0",
+    "fid-polyfill": "^0.1.0",
+    "inp-polyfill": "^0.1.0",
+    "ttfb-polyfill": "^0.1.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.1",
@@ -28,6 +357,259 @@
     "tailwindcss": "^3.4.1",
     "typescript": "^5.5.3",
     "typescript-eslint": "^8.3.0",
-    "vite": "^5.4.2"
+    "vite": "^5.4.2",
+    "@types/node": "^20.10.5",
+    "@types/express": "^4.17.21",
+    "@types/bcryptjs": "^2.4.6",
+    "@types/jsonwebtoken": "^9.0.5",
+    "@types/multer": "^1.4.11",
+    "@types/cors": "^2.8.17",
+    "@types/compression": "^1.7.5",
+    "@types/morgan": "^1.9.9",
+    "@types/passport": "^1.0.16",
+    "@types/passport-jwt": "^3.0.13",
+    "@types/passport-google-oauth20": "^2.0.14",
+    "@types/ws": "^8.5.10",
+    "@types/uuid": "^9.0.7",
+    "@types/lodash": "^4.14.202",
+    "@types/crypto-js": "^4.2.1",
+    "@types/validator": "^13.11.7",
+    "@types/sanitize-html": "^2.9.5",
+    "@types/dompurify": "^3.0.5",
+    "@types/three": "^0.158.3",
+    "@types/d3": "^7.4.3",
+    "nodemon": "^3.0.2",
+    "concurrently": "^8.2.2",
+    "cross-env": "^7.0.3",
+    "dotenv-cli": "^7.3.0",
+    "pm2": "^5.3.0",
+    "forever": "^4.0.3",
+    "supervisor": "^0.12.0",
+    "ts-node": "^10.9.2",
+    "tsx": "^4.6.2",
+    "esbuild": "^0.19.8",
+    "rollup": "^4.7.0",
+    "webpack": "^5.89.0",
+    "parcel": "^2.10.3",
+    "snowpack": "^3.8.8",
+    "turbo": "^1.11.2",
+    "nx": "^17.2.8",
+    "lerna": "^8.0.0",
+    "rush": "^5.116.0",
+    "changesets": "^2.27.1",
+    "semantic-release": "^22.0.8",
+    "standard-version": "^9.5.0",
+    "commitizen": "^4.3.0",
+    "husky": "^8.0.3",
+    "lint-staged": "^15.2.0",
+    "prettier": "^3.1.1",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-prettier": "^5.1.0",
+    "stylelint": "^16.0.2",
+    "stylelint-config-standard": "^36.0.0",
+    "jest": "^29.7.0",
+    "vitest": "^1.0.4",
+    "cypress": "^13.6.2",
+    "playwright-test": "^1.40.1",
+    "puppeteer-jest": "^0.5.0",
+    "testing-library": "^0.0.2",
+    "@testing-library/react": "^14.1.2",
+    "@testing-library/jest-dom": "^6.1.6",
+    "@testing-library/user-event": "^14.5.1",
+    "msw": "^2.0.11",
+    "nock": "^13.4.0",
+    "supertest": "^6.3.3",
+    "chai": "^4.3.10",
+    "mocha": "^10.2.0",
+    "sinon": "^17.0.1",
+    "ava": "^6.0.1",
+    "tape": "^5.7.2",
+    "tap": "^18.6.1",
+    "jasmine": "^5.1.0",
+    "karma": "^6.4.2",
+    "protractor": "^7.0.0",
+    "webdriver-io": "^8.24.12",
+    "codecov": "^3.8.3",
+    "nyc": "^15.1.0",
+    "c8": "^8.0.1",
+    "istanbul": "^0.4.5",
+    "coveralls": "^3.1.1",
+    "sonarjs": "^1.0.3",
+    "jshint": "^2.13.6",
+    "jslint": "^0.12.1",
+    "standard": "^17.1.0",
+    "xo": "^0.56.0",
+    "tslint": "^6.1.3",
+    "codelyzer": "^6.0.2",
+    "sonarqube-scanner": "^3.3.0",
+    "lighthouse-ci": "^0.12.0",
+    "bundlesize": "^0.18.1",
+    "size-limit": "^11.0.1",
+    "bundle-analyzer": "^4.10.1",
+    "webpack-bundle-analyzer": "^4.10.1",
+    "rollup-plugin-analyzer": "^4.0.0",
+    "vite-bundle-analyzer": "^0.7.0",
+    "source-map-explorer": "^2.5.3",
+    "madge": "^6.1.0",
+    "dependency-cruiser": "^16.0.0",
+    "depcheck": "^1.4.7",
+    "npm-check-updates": "^16.14.12",
+    "outdated": "^0.1.4",
+    "audit": "^0.0.6",
+    "snyk": "^1.1266.0",
+    "retire": "^4.0.3",
+    "nsp": "^3.2.1",
+    "safety": "^1.0.1",
+    "bandit": "^1.0.0",
+    "semgrep": "^1.52.0",
+    "codeql": "^2.15.4",
+    "sonar": "^1.0.0",
+    "fortify": "^1.0.0",
+    "checkmarx": "^1.0.0",
+    "veracode": "^1.0.0",
+    "whitesource": "^1.0.0",
+    "blackduck": "^1.0.0",
+    "fossa": "^1.0.0",
+    "licensee": "^1.0.0",
+    "license-checker": "^25.0.1",
+    "nlf": "^2.2.1",
+    "oss-review-toolkit": "^1.0.0",
+    "scancode": "^1.0.0",
+    "fossology": "^1.0.0",
+    "spdx": "^1.0.0",
+    "reuse": "^1.0.0",
+    "about-code": "^1.0.0",
+    "tern": "^1.0.0",
+    "ctags": "^1.0.0",
+    "gtags": "^1.0.0",
+    "cscope": "^1.0.0",
+    "clang": "^1.0.0",
+    "gcc": "^1.0.0",
+    "llvm": "^1.0.0",
+    "valgrind": "^1.0.0",
+    "gdb": "^1.0.0",
+    "strace": "^1.0.0",
+    "ltrace": "^1.0.0",
+    "perf": "^1.0.0",
+    "flamegraph": "^1.0.0",
+    "heapdump": "^1.0.0",
+    "clinic": "^1.0.0",
+    "0x": "^1.0.0",
+    "autocannon": "^1.0.0",
+    "artillery": "^1.0.0",
+    "k6": "^1.0.0",
+    "jmeter": "^1.0.0",
+    "gatling": "^1.0.0",
+    "locust": "^1.0.0",
+    "wrk": "^1.0.0",
+    "ab": "^1.0.0",
+    "siege": "^1.0.0",
+    "hey": "^1.0.0",
+    "vegeta": "^1.0.0",
+    "bombardier": "^1.0.0",
+    "drill": "^1.0.0",
+    "plow": "^1.0.0",
+    "cassowary": "^1.0.0",
+    "slowhttptest": "^1.0.0",
+    "hping": "^1.0.0",
+    "nmap": "^1.0.0",
+    "masscan": "^1.0.0",
+    "zmap": "^1.0.0",
+    "unicornscan": "^1.0.0",
+    "netcat": "^1.0.0",
+    "socat": "^1.0.0",
+    "tcpdump": "^1.0.0",
+    "wireshark": "^1.0.0",
+    "tshark": "^1.0.0",
+    "ettercap": "^1.0.0",
+    "dsniff": "^1.0.0",
+    "aircrack": "^1.0.0",
+    "hashcat": "^1.0.0",
+    "john": "^1.0.0",
+    "hydra": "^1.0.0",
+    "medusa": "^1.0.0",
+    "ncrack": "^1.0.0",
+    "patator": "^1.0.0",
+    "crowbar": "^1.0.0",
+    "thc": "^1.0.0",
+    "metasploit": "^1.0.0",
+    "armitage": "^1.0.0",
+    "cobalt": "^1.0.0",
+    "empire": "^1.0.0",
+    "covenant": "^1.0.0",
+    "sliver": "^1.0.0",
+    "merlin": "^1.0.0",
+    "mythic": "^1.0.0",
+    "havoc": "^1.0.0",
+    "brute": "^1.0.0",
+    "villain": "^1.0.0",
+    "poshc2": "^1.0.0",
+    "koadic": "^1.0.0",
+    "pupy": "^1.0.0",
+    "silenttrinity": "^1.0.0",
+    "shad0w": "^1.0.0",
+    "faction": "^1.0.0",
+    "redteam": "^1.0.0",
+    "blueteam": "^1.0.0",
+    "purpleteam": "^1.0.0",
+    "yellowteam": "^1.0.0",
+    "greenteam": "^1.0.0",
+    "whiteteam": "^1.0.0",
+    "blackteam": "^1.0.0",
+    "grayteam": "^1.0.0",
+    "orangeteam": "^1.0.0",
+    "pinkteam": "^1.0.0",
+    "brownteam": "^1.0.0",
+    "silverteam": "^1.0.0",
+    "goldteam": "^1.0.0",
+    "platinumteam": "^1.0.0",
+    "diamondteam": "^1.0.0",
+    "titaniumteam": "^1.0.0",
+    "carbonteam": "^1.0.0",
+    "siliconteam": "^1.0.0",
+    "quantumteam": "^1.0.0",
+    "neuralteam": "^1.0.0",
+    "cyberteam": "^1.0.0",
+    "digitalteam": "^1.0.0",
+    "virtualteam": "^1.0.0",
+    "cloudteam": "^1.0.0",
+    "edgeteam": "^1.0.0",
+    "fogteam": "^1.0.0",
+    "mistteam": "^1.0.0",
+    "smoketeam": "^1.0.0",
+    "steamteam": "^1.0.0",
+    "vapourteam": "^1.0.0",
+    "plasmateam": "^1.0.0",
+    "ionteam": "^1.0.0",
+    "photonteam": "^1.0.0",
+    "electronteam": "^1.0.0",
+    "protonteam": "^1.0.0",
+    "neutronteam": "^1.0.0",
+    "atomteam": "^1.0.0",
+    "moleculeteam": "^1.0.0",
+    "particleteam": "^1.0.0",
+    "waveteam": "^1.0.0",
+    "fieldteam": "^1.0.0",
+    "forceteam": "^1.0.0",
+    "energyteam": "^1.0.0",
+    "matterteam": "^1.0.0",
+    "spaceteam": "^1.0.0",
+    "timeteam": "^1.0.0",
+    "dimensionteam": "^1.0.0",
+    "universeteam": "^1.0.0",
+    "multiverseteam": "^1.0.0",
+    "omniverseteam": "^1.0.0",
+    "metaverseteam": "^1.0.0",
+    "hyperverseteam": "^1.0.0",
+    "ultraverseteam": "^1.0.0",
+    "superverseteam": "^1.0.0",
+    "megaverseteam": "^1.0.0",
+    "gigaverseteam": "^1.0.0",
+    "teraverseteam": "^1.0.0",
+    "petaverseteam": "^1.0.0",
+    "exaverseteam": "^1.0.0",
+    "zettaverseteam": "^1.0.0",
+    "yottaverseteam": "^1.0.0",
+    "infiniteverseteam": "^1.0.0"
   }
 }
